newclay/test/Compiler/Propagation/Fail/BindingDeclaredTypeMismatch1/main.clay
define foo;
overload foo(x:'T) {
    var y:'T = 2;
    return y;
}

define main;
overload main() {
    var x:Int = 5;
    var y:Bool = foo(true);
    return x, y;
}

